--- a/index.html
+++ b/index.html
@@ -7,11 +7,44 @@
     <title>Török valami</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="container text-center my-5 bg-white shadow-sm p-3">
-        <h1 class="t">Holy Photons in Turkey</h1>
+    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary text-uppercase fw-bold sticky-top" data-bs-theme="dark">
+        <div class="container">
+
+            <img src="img/logo-transparent.png" alt="Turkish Photons" width="90" height="">
+
+            <a class="navbar-brand text-white" href="#">Turkish Photons</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item pe-4">
+                        <a class="nav-link text-white active" href="#miisez">Mi is ez?</a>
+                    </li>
+                    <li class="nav-item pe-4">
+                        <a class="nav-link text-white not-active" href="#vasarlas">Vásárlás</a>
+                    </li>
+                    <li class="nav-item pe-4">
+                        <a class="nav-link text-white not-active" href="#gyakorlat">Gyakorlat</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="hero-section d-flex align-items-center justify-content-center text-center">
+        <div class="container position-relative z-2">
+            <h1 class="display-4 fw-bold text-white mb-4">Driven by photons,
+                inspired by science.</h1>
+            <a href="#miisez" class="btn btn-dark btn-lg fw-bold shadow">Learn More</a>
+        </div>
+        <div class="hero-overlay position-absolute top-0 start-0 w-100 h-100"></div>
     </header>
 
 
