Update index.html with Hungarian language support and add content to the hero section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary text-uppercase fw-bold sticky-top" data-bs-theme="dark">
+    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary text-uppercase fw-bold sticky-top"
+        data-bs-theme="dark">
         <div class="container">
 
             <img src="img/logo-transparent.png" alt="Turkish Photons" width="90" height="">
@@ -46,6 +47,34 @@
         </div>
         <div class="hero-overlay position-absolute top-0 start-0 w-100 h-100"></div>
     </header>
+
+    <section class="container my-5" id="miisez">
+        <div class="row">
+            <div class="col-6 rounded shadow">
+                <h2 class="text-uppercase fw-bold text-center">Mi is ez?</h2>
+                <p class="lead">A <b>Turkish Photons</b> a fénytechnológia élvonalában működő vállalat, amely
+                    elkötelezett a
+                    tudományos innováció és a fenntartható jövő kialakítása mellett. A legújabb fotonikai megoldásokkal
+                    és optikai fejlesztésekkel dolgozunk, hogy új utakat nyissunk a világítás, energiafelhasználás és a
+                    kommunikáció terén. Cégünk célja, hogy a fény erejét kihasználva hozzájáruljunk a globális
+                    technológiai fejlődéshez, miközben a tudományos kutatás és az oktatás alapjaira építünk.</p>
+                <p class="lead">Munkánk során a legmodernebb fénytechnológiai rendszereket, fotonikus alapú
+                    alkalmazásokat és optikai eszközöket fejlesztünk, amelyek nemcsak hogy javítják a mindennapi életet,
+                    hanem fenntarthatóbbá és hatékonyabbá teszik a jövő világát. Inspirációnk forrása a tudomány és az
+                    innováció, valamint a <b>Póda László</b> által képviselt tudományos örökség, aki példát mutatott
+                    számunkra
+                    a tudományos kíváncsiság és elkötelezettség terén.</p>
+                <p class="lead">A <b>Turkish Photons</b> a jövő fényét hordozza, és elkötelezetten dolgozunk azon, hogy minden
+                    új felfedezésünk egy lépéssel közelebb vigye a világot egy fenntarthatóbb, technológiailag
+                    fejlettebb holnaphoz.</p>
+
+            </div>
+            <div class="col-6">
+                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid h-100  rounded shadow">
+            </div>
+        </div>
+
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
