Refactor index.html layout and enhance content for clarity; add hover effect styles in style.css

--- a/index.html
+++ b/index.html
@@ -49,28 +49,24 @@
     </header>
 
     <section class="container my-5" id="miisez">
-        <div class="row">
-            <div class="col-6 rounded shadow">
+        <div class="row g-4">
+            <div class=" offset-lg-1 col-lg-5 col-md-12  rounded shadow  bg-white up p-4 ">
                 <h2 class="text-uppercase fw-bold text-center">Mi is ez?</h2>
-                <p class="lead">A <b>Turkish Photons</b> a fénytechnológia élvonalában működő vállalat, amely
-                    elkötelezett a
-                    tudományos innováció és a fenntartható jövő kialakítása mellett. A legújabb fotonikai megoldásokkal
-                    és optikai fejlesztésekkel dolgozunk, hogy új utakat nyissunk a világítás, energiafelhasználás és a
-                    kommunikáció terén. Cégünk célja, hogy a fény erejét kihasználva hozzájáruljunk a globális
-                    technológiai fejlődéshez, miközben a tudományos kutatás és az oktatás alapjaira építünk.</p>
-                <p class="lead">Munkánk során a legmodernebb fénytechnológiai rendszereket, fotonikus alapú
-                    alkalmazásokat és optikai eszközöket fejlesztünk, amelyek nemcsak hogy javítják a mindennapi életet,
-                    hanem fenntarthatóbbá és hatékonyabbá teszik a jövő világát. Inspirációnk forrása a tudomány és az
-                    innováció, valamint a <b>Póda László</b> által képviselt tudományos örökség, aki példát mutatott
-                    számunkra
-                    a tudományos kíváncsiság és elkötelezettség terén.</p>
-                <p class="lead">A <b>Turkish Photons</b> a jövő fényét hordozza, és elkötelezetten dolgozunk azon, hogy minden
-                    új felfedezésünk egy lépéssel közelebb vigye a világot egy fenntarthatóbb, technológiailag
-                    fejlettebb holnaphoz.</p>
+                <p class="lead">A <b>Turkish Photons</b> egy élvonalbeli fénytechnológiai vállalat, amely a tudományos
+                    innováció és a fenntarthatóság iránt elkötelezett. Korszerű fotonikai megoldásokat és optikai
+                    fejlesztéseket alkalmazunk, hogy fejlődést hozzunk a világítás, energiahasználat és kommunikáció
+                    területén. Célunk, hogy a fény erejét kihasználva támogassuk a globális technológiai haladást,
+                    miközben kutatásra és oktatásra építünk.</p>
+                <p class="lead">Fejlesztéseink – a modern fénytechnológiai rendszerektől a fotonikus alkalmazásokig – a
+                    jövő hatékonyabb és fenntarthatóbb világát szolgálják. Munkánkat a tudományos kíváncsiság hajtja, és
+                    inspirációt merítünk <b>Póda László</b> örökségéből, aki példát mutatott elhivatottságból és tudományos
+                    szenvedélyből. A <b>Turkish Photons</b> a jövő fényét viszi előre, minden újításunkkal egy jobb holnap
+                    felé.</p>
+
 
             </div>
-            <div class="col-6">
-                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid h-100  rounded shadow">
+            <div class="offset-lg-1 col-lg-5 col-md-12 shadow up bg-white p-4 d-flex justify-content-center align-items-center ">
+                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid ">
             </div>
         </div>
 
