--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Török valami</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -50,6 +51,12 @@
 
     <section class="container my-5" id="miisez">
         <div class="row g-4">
+
+            <div
+                class="offset-lg-1 col-lg-5 col-md-12 shadow up bg-white p-4 d-flex justify-content-center align-items-center ">
+                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid ">
+            </div>
+
             <div class=" offset-lg-1 col-lg-5 col-md-12  rounded shadow  bg-white up p-4 ">
                 <h2 class="text-uppercase fw-bold text-center">Mi is ez?</h2>
                 <p class="lead">A <b>Turkish Photons</b> egy élvonalbeli fénytechnológiai vállalat, amely a tudományos
@@ -59,23 +66,165 @@
                     miközben kutatásra és oktatásra építünk.</p>
                 <p class="lead">Fejlesztéseink – a modern fénytechnológiai rendszerektől a fotonikus alkalmazásokig – a
                     jövő hatékonyabb és fenntarthatóbb világát szolgálják. Munkánkat a tudományos kíváncsiság hajtja, és
-                    inspirációt merítünk <b>Póda László</b> örökségéből, aki példát mutatott elhivatottságból és tudományos
-                    szenvedélyből. A <b>Turkish Photons</b> a jövő fényét viszi előre, minden újításunkkal egy jobb holnap
+                    inspirációt merítünk <b>Póda László</b> örökségéből, aki példát mutatott elhivatottságból és
+                    tudományos
+                    szenvedélyből. A <b>Turkish Photons</b> a jövő fényét viszi előre, minden újításunkkal egy jobb
+                    holnap
                     felé.</p>
 
 
-            </div>
-            <div class="offset-lg-1 col-lg-5 col-md-12 shadow up bg-white p-4 d-flex justify-content-center align-items-center ">
-                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid ">
             </div>
         </div>
 
     </section>
 
+    <section id="masodik">
+        <div class="container">
+
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-5 mt-5 shadow-lg footer-gradient">
+        <div class="container">
+            <div class="row align-items-center g-4">
+                <div class="col-lg-6 col-md-12 order-2 order-lg-1 mb-4 mb-lg-0 text-lg-start text-center">
+                    <img src="img/logo-transparent.png" alt="Turkish Photons" width="70" class="mb-3 footer-logo">
+                    <h3 class="fw-bold mb-2">Turkish Photons</h3>
+                    <p class="mb-1">
+                        <i class="bi bi-envelope-fill me-2"></i>
+                        <a href="mailto:info@turkishphotons.com"
+                            class="text-white text-decoration-underline">info@turkishphotons.com</a>
+                    </p>
+                    <p class="mb-1">
+                        <i class="bi bi-telephone-fill me-2"></i>
+                        +36 30 123 4567
+                    </p>
+                    <p class="small text-secondary mb-0">&copy; <span id="currentYear"></span> Turkish Photons – Minden
+                        jog fenntartva</p>
+                </div>
+
+                <div class="col-lg-6 col-md-12 order-1 order-lg-2">
+                    <h4 class="mb-4 text-warning fw-bold">Póda László idézetek</h4>
+                    <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner rounded-4 shadow">
+                            <div class="carousel-item active bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Tizenöt utat ismerek Alsóörsre.”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Vaddisznók után öt percet várni kell mire el lehet
+                                        indulni”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„General Eletric gyártja a legjobb vérnyomásmérőt”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„UH UH UH...”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„MAGA ELVETEMŰLT!”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„FOTONOK”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„CSAJÁGI TANÁRÚR”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Caaasiooooo”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Ács Milán! Maga nem írt dolgozatot!”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Maga normál növésű harcos”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Velence vörös fenyő cölöpökön nyugszik, amelyeket cölöpverő kossal ütöttek be”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Talpas egyes”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„1...2...3...4...5 egyes”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Gyorsan kinyílik az öt ujjam”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Hát azért az én részembe is lesznek hibák, de nem azért mert én hibáztam, hanem a szerkesztő csajszi”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Centripetális gyorsulás... Jele, fogalma, mértékegysége, rajz”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Viszló tanár urat ismered?”</p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item bg-secondary bg-opacity-75 p-4">
+                                <blockquote class="blockquote mb-0">
+                                    <p class="fs-5 fst-italic">„Bilikék Trabant”</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon bg-dark rounded-circle p-2"
+                                aria-hidden="true"></span>
+                            <span class="visually-hidden">Előző</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon bg-dark rounded-circle p-2"
+                                aria-hidden="true"></span>
+                            <span class="visually-hidden">Következő</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <script>
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
