--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Török valami</title>
+    <link rel="icon" href="img/logo-transparent.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -16,9 +17,9 @@
         data-bs-theme="dark">
         <div class="container">
 
-            <img src="img/logo-transparent.png" alt="Turkish Photons" width="90" height="">
+            <img src="img/logo-transparent.png" alt="Turkish Photons" width="50">
 
-            <a class="navbar-brand text-white" href="#">Turkish Photons</a>
+            <a class="navbar-brand text-white" href="index.html">Turkish Photons</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item pe-4">
-                        <a class="nav-link text-white active" href="#miisez">Mi is ez?</a>
+                        <a class="nav-link text-white active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item pe-4">
-                        <a class="nav-link text-white not-active" href="#vasarlas">Vásárlás</a>
+                        <a class="nav-link text-white not-active" href="fejlesztesek.html">Fejlesztések</a>
                     </li>
                     <li class="nav-item pe-4">
-                        <a class="nav-link text-white not-active" href="#gyakorlat">Gyakorlat</a>
+                        <a class="nav-link text-white not-active" href="csapat.html">Csapat</a>
                     </li>
                 </ul>
             </div>
@@ -53,38 +54,143 @@
         <div class="row g-4">
 
             <div
-                class="offset-lg-1 col-lg-5 col-md-12 shadow up bg-white p-4 d-flex justify-content-center align-items-center ">
-                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid ">
+                class="offset-lg-1 col-lg-5 col-md-12 shadow hover-shadow bg-white p-4 d-flex justify-content-center align-items-center transition rounded">
+                <img src="img/logo-transparent.png" alt="Hero Image" class="img-fluid">
             </div>
 
-            <div class=" offset-lg-1 col-lg-5 col-md-12  rounded shadow  bg-white up p-4 ">
+            <div class="offset-lg-1 col-lg-5 col-md-12 rounded shadow bg-white hover-shadow p-4 transition">
                 <h2 class="text-uppercase fw-bold text-center">Mi is ez?</h2>
-                <p class="lead">A <b>Turkish Photons</b> egy élvonalbeli fénytechnológiai vállalat, amely a tudományos
-                    innováció és a fenntarthatóság iránt elkötelezett. Korszerű fotonikai megoldásokat és optikai
-                    fejlesztéseket alkalmazunk, hogy fejlődést hozzunk a világítás, energiahasználat és kommunikáció
-                    területén. Célunk, hogy a fény erejét kihasználva támogassuk a globális technológiai haladást,
-                    miközben kutatásra és oktatásra építünk.</p>
-                <p class="lead">Fejlesztéseink – a modern fénytechnológiai rendszerektől a fotonikus alkalmazásokig – a
-                    jövő hatékonyabb és fenntarthatóbb világát szolgálják. Munkánkat a tudományos kíváncsiság hajtja, és
+                <p class="lead">
+                    A <b>Turkish Photons</b> egy élvonalbeli fénytechnológiai vállalat, amely a tudományos innováció és
+                    a fenntarthatóság iránt elkötelezett. Korszerű fotonikai megoldásokat és optikai fejlesztéseket
+                    alkalmazunk, hogy fejlődést hozzunk a világítás, energiahasználat és kommunikáció területén.
+                </p>
+                <p class="lead">
+                    Fejlesztéseink – a modern fénytechnológiai rendszerektől a fotonikus alkalmazásokig – a jövő
+                    hatékonyabb és fenntarthatóbb világát szolgálják. Munkánkat a tudományos kíváncsiság hajtja, és
                     inspirációt merítünk <b>Póda László</b> örökségéből, aki példát mutatott elhivatottságból és
-                    tudományos
-                    szenvedélyből. A <b>Turkish Photons</b> a jövő fényét viszi előre, minden újításunkkal egy jobb
-                    holnap
-                    felé.</p>
+                    tudományos szenvedélyből. A <b>Turkish Photons</b> a jövő fényét viszi előre, minden újításunkkal
+                    egy jobb holnap felé.
+                </p>
+            </div>
 
+        </div>
+    </section>
+
+
+    <section id="masodik" class="py-5 ">
+        <div class="container">
+            <h1 class="text-center fw-bold display-5 text-dark mb-5">
+                Ismerd meg a <span class="text-warning">Turkish Photons</span>-t
+            </h1>
+            <div class="row g-4">
+
+
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 hover-shadow transition">
+                        <img src="img/photon-card.png" class="card-img-top rounded-top-4" alt="Photon Card">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <h5 class="card-title text-center fw-bold text-dark mb-3">Fejlesztéseink</h5>
+                            <p class="card-text text-center text-secondary">
+                                Fedezd fel fotonikai megoldásainkat, melyek új szintre emelik a világítást és
+                                kommunikációt.
+                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 text-center pb-4">
+                            <a href="fejlesztesek.html" class="btn btn-dark  fw-semibold px-4  shadow-sm">Megnézem</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 hover-shadow transition">
+                        <img src="img/team-card.png" class="card-img-top rounded-top-4" alt="Team Card">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <h5 class="card-title text-center fw-bold text-dark mb-3">Csapatunk</h5>
+                            <p class="card-text text-center text-secondary">
+                                Találkozz azokkal, akik a Turkish Photons mögött állnak – mérnökök, kutatók, újítók.
+                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 text-center pb-4">
+                            <a href="csapat.html" class="btn btn-dark  fw-semibold px-4  shadow-sm">Bemutatkozunk</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card h-100 shadow-lg border-0 rounded-4 hover-shadow transition">
+                        <img src="img/contact-card.png" class="card-img-top rounded-top-4" alt="Contact Card">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <h5 class="card-title text-center fw-bold text-dark mb-3">Kapcsolat</h5>
+                            <p class="card-text text-center text-secondary">
+                                Vedd fel velünk a kapcsolatot kérdés, együttműködés vagy bármi más kapcsán.
+                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 text-center pb-4">
+                            <a href="#footer" class="btn btn-dark  fw-semibold px-4  shadow-sm">Elérhetőségek</a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
-
     </section>
 
-    <section id="masodik">
-        <div class="container">
-
+    <section class="container my-5">
+        <h1 class="text-center fw-bold display-5 text-warning mb-5 ">Inspirációnk</h1>
+        <div class="row g-4">
+            <div class="col-lg-6 col-12">
+                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="img/poda(1).png" class="img-fluid rounded-start" alt="Póda László">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body p-4 d-flex flex-column ">
+                                <h5 class="card-title text-start fw-bold text-dark mb-3">Póda László</h5>
+                                <p class="card-text text-start text-secondary">
+                                    73 éves legendás fizikatanár. Nigériában született, magyar szülőktől, fehér bőrrel –
+                                    már ez is sztori. Zseni volt, Amerikában végzett fizikát, és a fotonok meg a Casio
+                                    számológépek megszállottja lett.
+                                </p>
+                                <p class="card-text text-start text-secondary">
+                                    Társalapítója lett a General Electricnek, ma Kanadában él. A „Photons” név tőle jött
+                                    – nála jobban senki se ért a fényhez.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-12">
+                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition">
+                    <div class="row g-0">
+                        <div class="col-md-8 order-sm-2 order-md-1">
+                            <div class="card-body p-4 d-flex flex-column ">
+                                <h5 class="card-title text-end fw-bold text-dark mb-3">Takáts Csongor</h5>
+                                <p class="card-text text-end text-secondary">
+                                    Isztambulban született török történész. Oxfordon végzett, brutálisan jó
+                                    szakirodalmakat írt a török hagyományokról és történelemről.
+                                </p>
+                                <p class="card-text text-end text-secondary">
+                                    Jelenleg Japánban kutat egy zsidó és afroamerikai kollégájával. A „Turkish” név tőle
+                                    jött – a kultúrához, identitáshoz ő adta az ízt.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 order-sm-1 order-md-2">
+                            <img src="img/török.jpg" class="img-fluid rounded-end" alt="Takáts Csongor">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer class="bg-dark text-white text-center py-5 mt-5 shadow-lg footer-gradient">
+
+    <footer class="bg-dark text-white text-center py-5 mt-5 shadow-lg footer-gradient" id="footer">
         <div class="container">
             <div class="row align-items-center g-4">
                 <div class="col-lg-6 col-md-12 order-2 order-lg-1 mb-4 mb-lg-0 text-lg-start text-center">
@@ -160,7 +266,8 @@
                             </div>
                             <div class="carousel-item bg-secondary bg-opacity-75 p-4">
                                 <blockquote class="blockquote mb-0">
-                                    <p class="fs-5 fst-italic">„Velence vörös fenyő cölöpökön nyugszik, amelyeket cölöpverő kossal ütöttek be”</p>
+                                    <p class="fs-5 fst-italic">„Velence vörös fenyő cölöpökön nyugszik, amelyeket
+                                        cölöpverő kossal ütöttek be”</p>
                                 </blockquote>
                             </div>
                             <div class="carousel-item bg-secondary bg-opacity-75 p-4">
@@ -180,12 +287,14 @@
                             </div>
                             <div class="carousel-item bg-secondary bg-opacity-75 p-4">
                                 <blockquote class="blockquote mb-0">
-                                    <p class="fs-5 fst-italic">„Hát azért az én részembe is lesznek hibák, de nem azért mert én hibáztam, hanem a szerkesztő csajszi”</p>
+                                    <p class="fs-5 fst-italic">„Hát azért az én részembe is lesznek hibák, de nem azért
+                                        mert én hibáztam, hanem a szerkesztő csajszi”</p>
                                 </blockquote>
                             </div>
                             <div class="carousel-item bg-secondary bg-opacity-75 p-4">
                                 <blockquote class="blockquote mb-0">
-                                    <p class="fs-5 fst-italic">„Centripetális gyorsulás... Jele, fogalma, mértékegysége, rajz”</p>
+                                    <p class="fs-5 fst-italic">„Centripetális gyorsulás... Jele, fogalma, mértékegysége,
+                                        rajz”</p>
                                 </blockquote>
                             </div>
                             <div class="carousel-item bg-secondary bg-opacity-75 p-4">
@@ -201,13 +310,13 @@
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
                             data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon bg-dark rounded-circle p-2"
+                            <span class="carousel-control-prev-icon bg-dark rounded-circle p-2 me-5"
                                 aria-hidden="true"></span>
                             <span class="visually-hidden">Előző</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
                             data-bs-slide="next">
-                            <span class="carousel-control-next-icon bg-dark rounded-circle p-2"
+                            <span class="carousel-control-next-icon bg-dark rounded-circle p-2 ms-5"
                                 aria-hidden="true"></span>
                             <span class="visually-hidden">Következő</span>
                         </button>
@@ -223,7 +332,10 @@
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
     <script>
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
+        const currentYearElement = document.getElementById('currentYear');
+        if (currentYearElement) {
+            currentYearElement.textContent = new Date().getFullYear();
+        }
     </script>
 </body>
 
