Enhance index.html layout for better responsiveness and add object-fit styling in style.css

--- a/index.html
+++ b/index.html
@@ -139,16 +139,18 @@
     </section>
 
     <section class="container my-5">
-        <h1 class="text-center fw-bold display-5 text-warning mb-5 ">Inspirációnk</h1>
+        <h1 class="text-center fw-bold display-5 text-warning mb-5">Inspirációnk</h1>
         <div class="row g-4">
-            <div class="col-lg-6 col-12">
-                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="img/poda(1).png" class="img-fluid rounded-start" alt="Póda László">
+
+            <div class="col-xl-6 col-12">
+                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition h-100">
+                    <div class="row g-0 h-100">
+                        <div class="col-md-4 h-100">
+                            <img src="img/poda(1).png" class="img-fluid h-100 w-100 rounded-start object-fit-cover"
+                                alt="Póda László">
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body p-4 d-flex flex-column ">
+                        <div class="col-md-8 h-100">
+                            <div class="card-body p-4 d-flex flex-column justify-content-center align-items-center h-100 w-100 text-center">
                                 <h5 class="card-title text-start fw-bold text-dark mb-3">Póda László</h5>
                                 <p class="card-text text-start text-secondary">
                                     73 éves legendás fizikatanár. Nigériában született, magyar szülőktől, fehér bőrrel –
@@ -164,11 +166,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-12">
-                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition">
-                    <div class="row g-0">
-                        <div class="col-md-8 order-sm-2 order-md-1">
-                            <div class="card-body p-4 d-flex flex-column ">
+
+
+            <div class="col-xl-6 col-12">
+                <div class="card mb-3 shadow-lg border-0 rounded-4 hover-shadow transition h-100">
+                    <div class="row g-0 h-100">
+                        <div class="col-md-8 order-sm-2 order-md-1 h-100">
+                            <div class="card-body p-4 d-flex flex-column justify-content-center align-items-center h-100 w-100 text-center">
                                 <h5 class="card-title text-end fw-bold text-dark mb-3">Takáts Csongor</h5>
                                 <p class="card-text text-end text-secondary">
                                     Isztambulban született török történész. Oxfordon végzett, brutálisan jó
@@ -180,8 +184,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 order-sm-1 order-md-2">
-                            <img src="img/török.jpg" class="img-fluid rounded-end" alt="Takáts Csongor">
+                        <div class="col-md-4 order-sm-1 order-md-2 h-100">
+                            <img src="img/török.jpg" class="img-fluid h-100 w-100 rounded-end object-fit-cover"
+                                alt="Takáts Csongor">
                         </div>
                     </div>
                 </div>
