Add modal for "Fejlesztések" section in csapat.html and index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                         <a class="nav-link text-white active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item pe-4">
-                        <a class="nav-link text-white not-active" href="fejlesztesek.html">Fejlesztések</a>
+                        <a class="nav-link text-white not-active" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">Fejlesztések</a>
                     </li>
                     <li class="nav-item pe-4">
                         <a class="nav-link text-white not-active" href="csapat.html">Csapat</a>
@@ -41,6 +42,27 @@
             </div>
         </div>
     </nav>
+
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark text-white">
+                <div class="modal-header border-secondary">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Póda László</h1>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+
+                </div>
+                <div class="modal-body">
+                    <p>Maga elveteműlt ! Ez az oldal még nincs kész ! Talpas egyes! Uh Uh Uh ...</p>
+                </div>
+                <div class="modal-footer border-secondary">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class="hero-section d-flex align-items-center justify-content-center text-center">
         <div class="container position-relative z-2">
