--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                             </p>
                         </div>
                         <div class="card-footer bg-transparent border-0 text-center pb-4">
-                            <a href="fejlesztesek.html" class="btn btn-dark  fw-semibold px-4  shadow-sm">Megnézem</a>
+                            <a href="fejlesztesek.html" class="btn btn-dark  fw-semibold px-4  shadow-sm" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">Megnézem</a>
                         </div>
                     </div>
                 </div>
