fejlesztesek fele kb kesz

--- a/csapat.html
+++ b/csapat.html
@@ -32,8 +32,7 @@
                         <a class="nav-link text-white not-active " href="index.html">Home</a>
                     </li>
                     <li class="nav-item pe-4">
-                        <a class="nav-link text-white not-active" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop">Fejlesztések</a>
+                        <a class="nav-link text-white not-active" href="fejlesztesek.html">Fejlesztések</a>
                     </li>
                     <li class="nav-item pe-4">
                         <a class="nav-link text-white  active" href="csapat.html">Csapat</a>
@@ -43,25 +42,7 @@
         </div>
     </nav>
 
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content bg-dark text-white">
-                <div class="modal-header border-secondary">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Póda László</h1>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
 
-                </div>
-                <div class="modal-body">
-                    <p>Maga elveteműlt ! Ez az oldal még nincs kész ! Talpas egyes! Uh Uh Uh ...</p>
-                </div>
-                <div class="modal-footer border-secondary">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <section class="container my-5">
