fejlesztesek kész?  weboldal kész? ???

--- a/fejlesztesek.html
+++ b/fejlesztesek.html
@@ -44,11 +44,11 @@
     </nav>
 
 
-    <section class="py-5 bg-success bg-gradient bg-opacity-10">
+    <section class="py-5 f_1 bg-opacity-10">
         <div class="container">
             <div class="row justify-content-center mb-4">
                 <div class="col-lg-8">
-                    <div class="card shadow-lg border-0 rounded-4">
+                    <div class="card shadow-lg border-0 rounded-4 " data-aos="zoom-in-up">
                         <div class="card-body text-center p-5">
                             <h1 class="display-4 fw-bold text-success mb-3">
                                 <i class="bi bi-lightbulb-fill me-2"></i>Fejlesztéseink
@@ -65,8 +65,7 @@
         </div>
     </section>
 
-    <section class="py-5 position-relative overflow-hidden"
-        style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);">
+    <section class="py-5 f_2 position-relative overflow-hidden">
         <div class="position-absolute top-0 start-0 w-100 h-100">
         </div>
         <div class="container position-relative">
@@ -75,7 +74,7 @@
             </h2>
 
             <div class="row mb-5 g-4 align-items-stretch">
-                <!-- Kép blokk -->
+
                 <div class="col-md-4 up d-flex align-items-center justify-content-center">
                     <div class="position-relative w-100 h-100">
                         <img src="img/foton+++.png" alt="Fénybazooka"
@@ -84,7 +83,7 @@
                     </div>
                 </div>
 
-                <!-- Szöveg blokk -->
+
                 <div class="col-md-8 d-flex up">
                     <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-1">
                         <div>
@@ -97,13 +96,13 @@
                                 meggyőzheted bárkit arról, hogy te vagy a legfényesebb elme ebben az idősíkban.
                             </p>
                         </div>
-                        <p class="fw-semibold text-warning mb-0"><i class="bi bi-fire"></i> ELVETEMŰLT: 11/10</p>
+                        <p class="fw-semibold text-warning mb-0"><i class="bi bi-fire"></i> ELVETEMÜLT: 11/10</p>
                     </div>
                 </div>
             </div>
 
             <div class="row mb-5 g-4 align-items-stretch flex-md-row-reverse">
-                <!-- Kép blokk -->
+
                 <div class="col-md-4 d-flex align-items-center justify-content-center up">
                     <div class="position-relative w-100 h-100">
                         <img src="img/fotonfilter1993.png" alt="Fénybazooka"
@@ -126,14 +125,14 @@
                                 végleg megszűnik az allergiás szenvedés!
                             </p>
                         </div>
-                        <p class="fw-semibold text-info mb-0"><i class="bi bi-emoji-laughing"></i> ElVETEMŰLT: UHUHUH/10
+                        <p class="fw-semibold text-info mb-0"><i class="bi bi-emoji-laughing"></i> ELVETEMÜLT: UHUHUH/10
                         </p>
                     </div>
                 </div>
             </div>
 
             <div class="row mb-5 g-4 align-items-stretch">
-                <!-- Kép blokk -->
+
                 <div class="col-md-4 d-flex align-items-center justify-content-center up">
                     <div class="position-relative w-100 h-100">
                         <img src="img/fotonecho.png" alt="Fénybazooka"
@@ -142,7 +141,7 @@
                     </div>
                 </div>
 
-                <!-- Szöveg blokk -->
+
                 <div class="col-md-8 d-flex up">
                     <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-3">
                         <div>
@@ -156,14 +155,122 @@
                                 idejű manifestációt tesz lehetővé egy fényalapú audiovizuális struktúrában.
                             </p>
                         </div>
-                        <p class="fw-semibold text-success mb-0"><i class="bi bi-stars"></i> ELVETEMŰLT: 7/10</p>
+                        <p class="fw-semibold text-success mb-0"><i class="bi bi-stars"></i> ELVETEMÜLT: 7/10</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="py-5 f_3 position-relative overflow-hidden">
+        <div class="container position-relative">
+            <h2 class="text-center fw-bold text-primary mb-5 display-5 text-uppercase border-bottom pb-2">
+                <i class="bi bi-globe-americas me-2 text-success"></i>Kollaborációs fejlesztések
+            </h2>
 
+
+            <div class="row mb-5 g-4 align-items-stretch">
+                <div class="col-md-4 up d-flex align-items-center justify-content-center">
+                    <div class="position-relative w-100 h-100">
+                        <img src="img/photoncalc.png" alt="PhotonCalc"
+                            class="img-fluid w-100 h-100 object-fit-cover rounded-4 shadow">
+                    </div>
+                </div>
+                <div class="col-md-8 d-flex up">
+                    <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-4">
+                        <div>
+                            <h4 class="fw-bold text-dark border-bottom pb-2 mb-3">
+                                <i class="bi bi-calculator-fill text-primary me-2"></i>PhotonCalc X Casio
+                            </h4>
+                            <p class="text-secondary mb-3">
+                                Egy fényalapú Casio számológép, amely speciális fotonikus kijelzővel és energiahatékony
+                                napelemmel működik – sötétben is világít, és minden szögből olvasható. A Turkish Photons
+                                technológiájával az unalmas számolás is ragyogó élménnyé válik.
+                            </p>
+                        </div>
+                        <p class="fw-semibold text-primary mb-0"><i class="bi bi-battery-charging"></i> ELVETEMÜLT: 4/10
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row mb-5 g-4 align-items-stretch flex-md-row-reverse">
+                <div class="col-md-4 d-flex align-items-center justify-content-center up">
+                    <div class="position-relative w-100 h-100">
+                        <img src="img/karca.png" alt="Karaca"
+                            class="img-fluid w-100 h-100 object-fit-cover rounded-4 shadow">
+                    </div>
+                </div>
+                <div class="col-md-8 d-flex up">
+                    <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-5">
+                        <div>
+                            <h4 class="fw-bold text-dark border-bottom pb-2 mb-3">
+                                <i class="bi bi-egg-fried text-danger me-2"></i>Karaca X Turkish Photons
+                            </h4>
+                            <p class="text-secondary mb-3">
+                                Egy fotonvezérelt intelligens sütő, ami nem gázt vagy áramot, hanem nagy teljesítményű
+                                fényhullámokat használ a főzéshez. A kebab pontosan ott sül ropogósra, ahol kell – és
+                                közben automatikusan optimalizálja a hőeloszlást kvantum-alapú szenzorokkal.
+                            </p>
+                        </div>
+                        <p class="fw-semibold text-danger mb-0"><i class="bi bi-thermometer-sun"></i> ELVETEMÜLT: 9.5/10
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row mb-5 g-4 align-items-stretch">
+                <div class="col-md-4 d-flex align-items-center justify-content-center up">
+                    <div class="position-relative w-100 h-100">
+                        <img src="img/faber.png" alt="PhotonBrush"
+                            class="img-fluid w-100 h-100 object-fit-cover rounded-4 shadow">
+                    </div>
+                </div>
+                <div class="col-md-8 d-flex up">
+                    <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-6">
+                        <div>
+                            <h4 class="fw-bold text-dark border-bottom pb-2 mb-3">
+                                <i class="bi bi-brush text-warning me-2"></i>PhotonBrush X Faber-Castell
+                            </h4>
+                            <p class="text-secondary mb-3">
+                                Egy intelligens fény-ceruza készlet, amely minden vonással fényhullámokat bocsát ki – a
+                                rajz nem csak látszik, hanem világít, rezeg, és kommunikál más alkotásokkal. A papír a
+                                múlté: mostantól a fotonok a vásznad.
+                            </p>
+                        </div>
+                        <p class="fw-semibold text-warning mb-0"><i class="bi bi-pencil"></i> ELVETEMÜLT: 9/11</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row mb-5 g-4 align-items-stretch flex-md-row-reverse">
+                <div class="col-md-4 up d-flex align-items-center justify-content-center">
+                    <div class="position-relative w-100 h-100">
+                        <img src="img/alsóörs.png" alt="PhotonPath"
+                            class="img-fluid w-100 h-100 object-fit-cover rounded-4 shadow">
+                    </div>
+                </div>
+                <div class="col-md-8 d-flex up">
+                    <div class="bg-white rounded-4 shadow-lg p-4 d-flex flex-column justify-content-between w-100 b-7">
+                        <div>
+                            <h4 class="fw-bold text-dark border-bottom pb-2 mb-3">
+                                <i class="bi bi-compass-fill text-info me-2"></i>PhotonPath X Alsóörs Önkormányzat
+                            </h4>
+                            <p class="text-secondary mb-3">
+                                Egy fényalapú navigációs rendszer, ami megnyitja előtted mind a 15 lehetséges utat
+                                Alsóörs felé – még azokat is, amik elméletileg nem is léteznek. A kvantumalgoritmus
+                                mindig tudja, melyik úton jut el leghamarabb a lelked is a Balaton-partra.
+                            </p>
+                        </div>
+                        <p class="fw-semibold text-info mb-0"><i class="bi bi-geo-alt-fill"></i> ELVETEMÜLT: 10/10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
