Fix typo in description of the photonic pollen remover in fejlesztesek.html

--- a/fejlesztesek.html
+++ b/fejlesztesek.html
@@ -120,7 +120,7 @@
                             <p class="text-secondary mb-3">
                                 Egy ablakra szerelhető fotonikus pollensemlegesítő, amely célzott
                                 fényhullámokkal lebontja a levegőben keringő polleneket, mielőtt azok belélegezhetők
-                                lennének. Automatikusan aktiválódik, amint a függöny el van húzva, így az 116-os
+                                lennének. Automatikusan aktiválódik, amint a függöny el van húzva, így a 106-os
                                 teremben
                                 végleg megszűnik az allergiás szenvedés!
                             </p>
