--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                         szakirodalmakat írt a török hagyományokról és történelemről.
                                     </p>
                                     <p class="card-text text-secondary">
-                                        Jelenleg Japánban kutat egy zsidó és afroamerikai kollégájával. A „Turkish” név
+                                        Jelenleg Japánban kutat egy <a href="podakaland.html" style="all: unset;">zsidó</a> és afroamerikai kollégájával. A „Turkish” név
                                         tőle jött – a kultúrához, identitáshoz ő adta az ízt.
                                     </p>
                                 </div>
@@ -211,7 +211,7 @@
                                 <!-- rövid szöveg (csak mobilon) -->
                                 <div class="d-block d-sm-none">
                                     <p class="card-text text-secondary">
-                                        Török történész Oxfordról, most Japánban kutat. A „Turkish” név tőle jött.
+                                        <a href="podakaland.html" style="all: unset;">Török</a> történész Oxfordról, most Japánban kutat. A „Turkish” név tőle jött.
                                     </p>
                                 </div>
 
